fix: make modals z-index bigger

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -11,7 +11,7 @@
   top: 0;
   transition: transform .3s ease-out;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 
   &_wrapper {
     align-items: center;
